# Repocard-Studio-KZ

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_v1.0.0.md  SECURITY.md  cargo_output.txt  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.css  App.tsx  export.rs  github.rs  lib.rs  templates.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: export.rs  github.rs  lib.rs  main.rs  templates.rs
src/test/: App.test.tsx  setup.ts  utils.test.ts
