[package]
name = "repocard-studio"
version = "1.0.0"
description = "RepoCard Studio - Generate polished social cards for GitHub repos"
authors = ["LAZYFROG (KZ)"]
edition = "2021"
license = "MIT"
repository = "https://github.com/lazyfrog/repocard-studio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "repocard_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
resvg = "0.45"
usvg = "0.45"
tiny-skia = "0.11"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

